--- a/alembic.ini
+++ b/alembic.ini
@@ -85,9 +85,9 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 
-;sqlalchemy.url = postgresql://%(DB_USER)s:%(DB_PASSWORD)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s
+sqlalchemy.url =  postgresql+psycopg2://%(DB_USER)s:%(DB_PASSWORD)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s
 
-sqlalchemy.url = sqlite:///./test.db
+
 
 
 [post_write_hooks]
