--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,11 @@ starlette==0.47.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
+
+asyncpg==0.29.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+aiosmtplib==2.0.2
+email-validator==2.1.0
+python-decouple==3.8
