--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,54 @@ version: "3.8"
 services:
   db:
     image: postgres:15
-    container_name: cims_postgres
+    container_name: ${PROJECT_NAME}_postgres
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: cimsfastapi
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - pg_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    env_file:
+      - .env
 
   web:
     build: .
-    container_name: cims_fastapi
+    container_name: ${PROJECT_NAME}_fastapi
     restart: always
     depends_on:
       - db
-    environment:
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_NAME: cimsfastapi
-      DB_HOST: db
-      DB_PORT: 5432
-    ports:
-      - "8000:8000"
+    env_file:
+      - .env
+    expose:
+      - "${APP_PORT}"
     command: >
       sh -c "alembic upgrade head &&
-             uvicorn run:app --host 0.0.0.0 --port 8000 --workers 4"
+             uvicorn run:app --host ${APP_HOST} --port ${APP_PORT} --workers 4"
+
+  nginx:
+    image: nginx:latest
+    container_name: ${PROJECT_NAME}_nginx
+    restart: always
+    depends_on:
+      - web
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - certbot-etc:/etc/letsencrypt
+      - certbot-www:/var/www/certbot
+
+  certbot:
+    image: certbot/certbot
+    container_name: ${PROJECT_NAME}_certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-www:/var/www/certbot
+    command: certonly --webroot --webroot-path=/var/www/certbot --email admin@cognilabs.org --agree-tos --no-eff-email -d cims.cognilabs.org
 
 volumes:
   pg_data:
+  certbot-etc:
+  certbot-www:
