--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -12,17 +12,28 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name cims.cognilabs.org;
 
     ssl_certificate /etc/letsencrypt/live/cims.cognilabs.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/cims.cognilabs.org/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/cims.cognilabs.org/chain.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
     location / {
         proxy_pass http://web:8000;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+        if ($request_method = OPTIONS) {
+            return 204;
+        }
     }
 }
