--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name cims.cognilabs.org;
 
     ssl_certificate /etc/letsencrypt/live/cims.cognilabs.org/fullchain.pem;
@@ -23,15 +24,17 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://web:8000;
+        proxy_pass http://web:8000;  # or http://fastapi:8000; if your service is named 'fastapi'
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
         add_header Access-Control-Allow-Origin "*" always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+
         if ($request_method = OPTIONS) {
             return 204;
         }
