--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,14 @@ services:
       - db
     env_file:
       - .env
-    expose:
-      - "${APP_PORT}"
+    ports:
+      - "${APP_PORT}:${APP_PORT}"
     command: >
-      sh -c "alembic upgrade head &&
+      sh -c "alembic stamp head &&
              uvicorn run:app --host ${APP_HOST} --port ${APP_PORT} --workers 4"
+    # NOTE: 'alembic stamp head' replaces 'alembic upgrade head' to avoid re-running migrations on existing tables
+    volumes:
+      - .:/app
 
   nginx:
     image: nginx:latest
@@ -38,17 +41,27 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      # Map our Nginx config file
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      # SSL certificates and challenge files
       - certbot-etc:/etc/letsencrypt
       - certbot-www:/var/www/certbot
 
   certbot:
     image: certbot/certbot
     container_name: ${PROJECT_NAME}_certbot
+    depends_on:
+      - nginx
     volumes:
       - certbot-etc:/etc/letsencrypt
       - certbot-www:/var/www/certbot
-    command: certonly --webroot --webroot-path=/var/www/certbot --email admin@cognilabs.org --agree-tos --no-eff-email -d cims.cognilabs.org
+    command: >
+      certonly --webroot
+               --webroot-path=/var/www/certbot
+               --email admin@cognilabs.org
+               --agree-tos
+               --no-eff-email
+               -d cims.cognilabs.org
 
 volumes:
   pg_data:
