--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name cims.cognilabs.org;
+    server_name 209.38.209.183;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -14,7 +14,7 @@ server {
 server {
     listen 443 ssl;
     http2 on;
-    server_name cims.cognilabs.org;
+    server_name 209.38.209.183;
 
     ssl_certificate /etc/letsencrypt/live/cims.cognilabs.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/cims.cognilabs.org/privkey.pem;
