Modify nginx.conf for new API server configuration ssl
Updated server configuration for HTTP and HTTPS with new server name and SSL settings.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,28 @@
-
+# HTTP - faqat Certbot uchun va HTTPS'ga yo‘naltirish
 server {
     listen 80;
-    server_name cims.cognilabs.org 209.38.209.183;
+    server_name api.project.cims.cognilabs.org;
 
+    # Certbot uchun verification yo‘li
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+
+    # HTTP dan HTTPS ga yo‘naltirish
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS - asosiy server
+server {
+    listen 443 ssl;
+    server_name api.project.cims.cognilabs.org;
+
+    ssl_certificate /etc/letsencrypt/live/api.project.cims.cognilabs.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.project.cims.cognilabs.org/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         proxy_pass http://web:8000;
