--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,29 +1,14 @@
-# HTTP - faqat Certbot uchun va HTTPS'ga yo‘naltirish
 server {
     listen 80;
     server_name api.project.cims.cognilabs.org;
 
-    # Certbot uchun verification yo‘li
+    # Certbot uchun maxsus yo‘l
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
+        allow all;
     }
 
-    # HTTP dan HTTPS ga yo‘naltirish
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# HTTPS - asosiy server
-server {
-    listen 443 ssl;
-    server_name api.project.cims.cognilabs.org;
-
-    ssl_certificate /etc/letsencrypt/live/api.project.cims.cognilabs.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.project.cims.cognilabs.org/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
+    # Boshqa barcha so‘rovlar (docs va boshqalar)
     location / {
         proxy_pass http://web:8000;
         proxy_http_version 1.1;
@@ -31,13 +16,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
     }
 }
