--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,13 +2,13 @@ server {
     listen 80;
     server_name api.project.cims.cognilabs.org;
 
-    # Certbot uchun maxsus yo‘l
+    # 🔹 Bu qism Certbot uchun majburiy
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
         allow all;
     }
 
-    # Boshqa barcha so‘rovlar (docs va boshqalar)
+    # 🔹 Boshqa barcha so‘rovlarni FastAPI'ga yuborish
     location / {
         proxy_pass http://web:8000;
         proxy_http_version 1.1;
