--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,11 +31,31 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+        # ==============================
+        # ✅ CORS uchun ruxsat etilgan domenlar
+        # ==============================
+        set $cors_origin "";
 
+        if ($http_origin = "https://cims-two.vercel.app") {
+            set $cors_origin "https://cims-two.vercel.app";
+        }
+
+        if ($http_origin = "https://cims.cognilabs.org") {
+            set $cors_origin "https://cims.cognilabs.org";
+        }
+
+        # CORS headerlar
+        add_header 'Access-Control-Allow-Origin' "$cors_origin" always;
+        add_header 'Access-Control-Allow-Methods' "GET, POST, OPTIONS, PUT, DELETE" always;
+        add_header 'Access-Control-Allow-Headers' "Authorization, Content-Type" always;
+        add_header 'Access-Control-Allow-Credentials' "true" always;
+
+        # OPTIONS so'rovlarini alohida qaytarish
         if ($request_method = OPTIONS) {
+            add_header 'Access-Control-Allow-Origin' "$cors_origin";
+            add_header 'Access-Control-Allow-Methods' "GET, POST, OPTIONS, PUT, DELETE";
+            add_header 'Access-Control-Allow-Headers' "Authorization, Content-Type";
+            add_header 'Access-Control-Allow-Credentials' "true";
             return 204;
         }
     }
