--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,14 +45,14 @@ server {
         }
 
         # CORS headerlar
-        add_header 'Access-Control-Allow-Origin' "$cors_origin" always;
+        add_header 'Access-Control-Allow-Origin' 'https://cims-two.vercel.app'; always;
         add_header 'Access-Control-Allow-Methods' "GET, POST, OPTIONS, PUT, DELETE" always;
         add_header 'Access-Control-Allow-Headers' "Authorization, Content-Type" always;
         add_header 'Access-Control-Allow-Credentials' "true" always;
 
         # OPTIONS so'rovlarini alohida qaytarish
         if ($request_method = OPTIONS) {
-            add_header 'Access-Control-Allow-Origin' "$cors_origin";
+            add_header 'Access-Control-Allow-Origin' 'https://cims-two.vercel.app';
             add_header 'Access-Control-Allow-Methods' "GET, POST, OPTIONS, PUT, DELETE";
             add_header 'Access-Control-Allow-Headers' "Authorization, Content-Type";
             add_header 'Access-Control-Allow-Credentials' "true";
