--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,10 +45,10 @@ server {
         }
 
         # CORS headerlar
-        add_header 'Access-Control-Allow-Origin' 'https://cims-two.vercel.app'; always;
-        add_header 'Access-Control-Allow-Methods' "GET, POST, OPTIONS, PUT, DELETE" always;
-        add_header 'Access-Control-Allow-Headers' "Authorization, Content-Type" always;
-        add_header 'Access-Control-Allow-Credentials' "true" always;
+        add_header 'Access-Control-Allow-Origin' 'https://cims-two.vercel.app';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
 
         # OPTIONS so'rovlarini alohida qaytarish
         if ($request_method = OPTIONS) {
