changed verification code5

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ server {
             set $cors_origin "https://cims.cognilabs.org";
         }
 
-        # CORS headerlar
+        # CORS headerlarkldjflk
         add_header Access-Control-Allow-Origin "https://cims-two.vercel.app" always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
