--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,44 +1,57 @@
-# HTTP - faqat redirect uchun
+# --- HTTP (redirect to HTTPS) ---
 server {
     listen 80;
     server_name api.project.cims.cognilabs.org;
 
+    # Allow Certbot challenge requests
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
+    # Redirect everything else to HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
-# HTTPS - asosiy backend
+
+# --- HTTPS (main backend proxy) ---
 server {
     listen 443 ssl;
     server_name api.project.cims.cognilabs.org;
 
+    # --- SSL Certificates ---
     ssl_certificate /etc/letsencrypt/live/api.project.cims.cognilabs.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.project.cims.cognilabs.org/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
 
+    # --- Proxy Settings ---
     location / {
         proxy_pass http://web:8000;
         proxy_http_version 1.1;
+
+        # Pass essential headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # --- CORS ruxsat ---
-        add_header Access-Control-Allow-Origin "https://cims-two.vercel.app" always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+        # Increase timeout for large requests
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
 
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
+        # Disable Nginx caching (for API calls)
+        proxy_buffering off;
+    }
+
+    # Optional: custom error pages
+    error_page 502 /502.html;
+    location = /502.html {
+        root /usr/share/nginx/html;
+        internal;
     }
 }
