--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,20 @@
-# --- HTTP (redirect to HTTPS) ---
+# --- HTTP (Redirect to HTTPS) ---
 server {
     listen 80;
     server_name api.project.cims.cognilabs.org;
 
-    # Allow Certbot challenge requests
+    # Certbot challenge
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Redirect everything else to HTTPS
+    # Redirect all HTTP -> HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
-
-# --- HTTPS (main backend proxy) ---
+# --- HTTPS (Main backend proxy) ---
 server {
     listen 443 ssl;
     server_name api.project.cims.cognilabs.org;
@@ -28,27 +27,23 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # --- Proxy Settings ---
+    # --- Proxy to FastAPI (CORS handled by backend) ---
     location / {
         proxy_pass http://web:8000;
         proxy_http_version 1.1;
 
-        # Pass essential headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Increase timeout for large requests
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
         proxy_send_timeout 300;
-
-        # Disable Nginx caching (for API calls)
         proxy_buffering off;
     }
 
-    # Optional: custom error pages
+    # --- Custom Error Page (optional) ---
     error_page 502 /502.html;
     location = /502.html {
         root /usr/share/nginx/html;
